Etiquetas de encabezado agredadas y media query referida a em

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </header>
     <main>
           <section class="invitation">
-            <p class="invitation__title">Join our Community</p>
+            <h1 class="invitation__title">Join our Community</h1>
             <p class="invitation__subtitle">30-day, hassle-free money back guarantee</p>
             <p class="invitation__description"> Gain access to our full library of tutorials along with expert code reviews. 
               Perfect for any developers who are serious about honing their skills.</p>
           </section >
           <section class="subscription">
-            <p class="subscription__type">Monthly Subscription</p>
+            <h2 class="subscription__type">Monthly Subscription</h2>
 
             <div class="subscription__price">
               <p> &dollar;29</p>
@@ -30,10 +30,10 @@
             </div>
 
             <p class="subscription__description">Full access for less than &dollar;1 a day</p>
-            <button class="subscription__button">Sign Up</button>
+            <button class="subscription__button"><a href="https://github.com/Santiagoponce">Sign Up</a></button>
           </section>
           <section class="whyUs">
-              <p class="whyUs__title">Why Us</p>
+              <h3 class="whyUs__title">Why Us</h3>
               <ul class="whyUs__list">
                 <li>Tutorials by industry experts</li>
                 <li>  Peer &amp; expert code review</li>
